# topolizer

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  build-offline-package.sh  pyproject.toml  start-backend.sh  start-frontend.sh  start-server.sh
.github/: PAGES_SETUP.md
.github/workflows/: docker-build-publish.yml
backend/: main.py
deployment/docker/: .dockerignore  Dockerfile  docker-compose.yml
deployment/helm/topology-builder/: Chart.yaml  values.yaml
deployment/helm/topology-builder/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: ALIGNMENT_TOOLS.md  DEPLOYMENT.md  FRONTEND_ARCHITECTURE.md  MODULARIZATION_SUMMARY.md  NEW_FEATURES_IMPLEMENTATION.md  PRE_COMMIT_SETUP.md  VSCODE_SETUP.md
frontend/: .parcelrc  build-template.js  package-lock.json  package.json
frontend/src/scripts/: app.js
frontend/src/scripts/canvas/: events.js  panning.js  selectionMode.js  zoom.js
frontend/src/scripts/config/: constants.js
frontend/src/scripts/connections/: connectionInteractions.js  connectionManager.js
frontend/src/scripts/events/: keyboard.js  uiEvents.js
frontend/src/scripts/services/: api.js  restore.js  storage.js
frontend/src/scripts/shapes/: lineEndpointHandles.js  multiShapeAlignment.js  shapeEvents.js  (+4 more)
frontend/src/styles/: _alignment.scss  _base.scss  _canvas.scss  _connections.scss  _panels.scss  _shapes.scss  _sidebar.scss  _variables.scss  main.scss
frontend/src/templates/: index.jinja
(+18 files in other folders)
